force-app/main/default/objects/Instructor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>