force-app/main/default/objects/Instructor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>