force-app/main/default/objects/Instructor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>