force-app/main/default/objects/Instructor__c/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <label>Instructor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelicense</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>