force-app/main/default/objects/Instructor__c/fields/InstructorID__c.field-meta.xml
<CustomField>
    <fullName>InstructorID__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <externalId>true</externalId>
    <label>Instructor ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>