force-app/main/default/objects/Instructor__c/fields/InstructorIDAutonum__c.field-meta.xml
<CustomField>
    <fullName>InstructorIDAutonum__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>InstructorID Autonum</label>
    <type>AutoNumber</type>
</CustomField>