force-app/main/default/objects/Instructor__c/fields/InstructorIDDisplay__c.field-meta.xml
<CustomField>
    <fullName>InstructorIDDisplay__c</fullName>
    <formula>IF(

ISBLANK(  InstructorID__c  ) ,
 InstructorIDAutonum__c  ,
InstructorID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor ID</label>
    <type>Text</type>
</CustomField>