force-app/main/default/objects/Instructor__c/fields/InstructorName__c.field-meta.xml
<CustomField>
    <fullName>InstructorName__c</fullName>
    <formula>FirstName__c + &quot; &quot;  + LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>