force-app/main/default/objects/Instructor__c/fields/Island__c.field-meta.xml
<CustomField>
    <fullName>Island__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Island</label>
    <length>100</length>
    <type>Text</type>
</CustomField>