force-app/main/default/objects/Instructor__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>