force-app/main/default/objects/Instructor__c/fields/Middle_Initials2__c.field-meta.xml
<CustomField>
    <fullName>Middle_Initials2__c</fullName>
    <label>Middle Initials</label>
    <length>80</length>
    <type>Text</type>
</CustomField>