force-app/main/default/objects/Instructor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>