force-app/main/default/objects/Instructor__c/fields/ProviderSchool__c.field-meta.xml
<CustomField>
    <fullName>ProviderSchool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Provider / School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instructors</relationshipLabel>
    <relationshipName>Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>