force-app/main/default/objects/Instructor__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>