force-app/main/default/objects/Instructor__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>