force-app/main/default/objects/Instructor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InstructorID__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>Island__c</columns>
    <columns>ProviderSchool__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>